Correction des routes v2  pour la doc de l'api et du format de retour des requetes
